<resources>
    <string name="app_name">AgendaContactos</string>
    <string name="contactos">CONTACTOS</string>
    <string name="titulo">Título:</string>
    <string name="aniadir">AÑADIR</string>
    <string name="nota">Nota:</string>
    <string name="aniadir2">AÑADIR</string>
    <string name="blanco" />
    <string name="agenda">AGENDA</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notas">NOTAS</string>
    <string name="t_tulo">Título:</string>
    <string name="modificar">Modificar</string>
    <string name="borrar">BORRAR</string>
    <string name="nota2">NOTA</string>
    <string name="direcci_n">Dirección</string>
    <string name="tel_fono">Teléfono</string>
    <string name="borrar2">Borrar</string>
    <string name="email">Email</string>
    <string name="foto">foto</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombre">Nombre</string>
    <string name="notas3">NOTAS</string>
    <string name="a_adir">AÑADIR</string>
    <string name="tel_fono2">Teléfono:</string>
    <string name="a_adir2">AÑADIR</string>
    <string name="email2">Email:</string>
    <string name="nombre2">Nombre:</string>
    <string name="apellidos2">Apellidos:</string>
    <string name="direcci_n2">Dirección:</string>
    <string name="fecha">FECHA</string>
    <string name="titulo2">Titulo</string>
    <string name="foto_agenda">foto agenda</string>
    <string name="fecha3">FECHA:</string>
    <string name="recordatorio">AÑADIR</string>
    <string name="hora">HORA:</string>
    <string name="t_tulo3">Título</string>
    <string name="descripci_n3">Descripción</string>
    <string name="reloj">reloj</string>
    <string name="calendaricon">calendaricon</string>
    <string name="recordatorios1">RECORDATORIOS</string>
    <string name="t_tulo4">TÍTULO:</string>
    <string name="fotocalendario">fotoCalendario</string>
    <string name="checkbox">Aceptar los terminos y condiciones</string>
    <string name="contacto">CONTACTO</string>
    <string name="recordatorio2">RECORDATORIO</string>
</resources>
