<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopapel"
    tools:context=".vista.ModificarborrarContactoActivity">

    <LinearLayout
        android:layout_width="253dp"
        android:layout_height="473dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nombretextview"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:maxLength="25"
            android:hint="@string/nombre"
            android:importantForAutofill="no"
            android:inputType="text"/>

        <EditText
            android:id="@+id/apellidostextview"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/apellidos"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"/>

        <EditText
            android:id="@+id/telefonotextview"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/tel_fono"
            android:importantForAutofill="no"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/direcciontextview"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/direcci_n"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"/>

        <EditText
            android:id="@+id/emailtextview"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            />


    </LinearLayout>

    <ImageView
        android:id="@+id/fotomodid"
        android:layout_width="137dp"
        android:layout_height="150dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:contentDescription="@string/foto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/contactoimagen" />

    <Button
        android:id="@+id/modificarbtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="240dp"
        android:text="@string/modificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/buttonshape"
        android:shadowColor="#E3E3E3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/borrarbtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="340dp"
        android:text="@string/borrar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/buttonshape"
        android:shadowColor="#E3E3E3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="#FFFFFF"/>
</androidx.constraintlayout.widget.ConstraintLayout>