<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="26dp"
        android:layout_height="86dp"
        android:layout_weight="1"
        android:contentDescription="@string/nota"
        app:srcCompat="@drawable/tomarnota" />

    <TextView
        android:id="@+id/FechaItemId"
        android:layout_width="26dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:hint="@string/fecha"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tituloItemId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:text="@string/titulo2"
        android:textAlignment="center" />
</LinearLayout>
