<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aniadirContactos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopapel"
    tools:context=".vista.AniadirContactoActivity"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="281dp"
        android:layout_height="548dp"
        android:layout_marginTop="192dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nombreeditTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="25"
            android:hint="@string/blanco"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/apellidoseditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/blanco"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/telefonoeditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/blanco"
            android:importantForAutofill="no"
            android:inputType="phone" />

        <EditText
            android:id="@+id/direccioneditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/blanco"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emaileditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/blanco"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btnaniadir"
            android:layout_width="101dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:text="@string/a_adir"
            android:background="@drawable/buttonshape"
            android:shadowColor="#E3E3E3"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:text="@string/a_adir2"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="122dp"
        android:layout_height="539dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="192dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/nombre2"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="17dp"
            android:text="@string/apellidos2"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="17dp"
            android:text="@string/tel_fono2"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="17dp"
            android:text="@string/direcci_n2"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="17dp"
            android:text="@string/email2"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>