<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopapel"
    tools:context=".vista.ModificarborrarNotaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nota2"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="48sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="215dp"
        android:layout_height="108dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="44dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/modificarnotasid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/blanco"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="149dp" />
    </ScrollView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="108dp"
        android:text="@string/t_tulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="190dp"
        android:text="@string/nota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/modificartituloid"
        android:layout_width="215dp"
        android:layout_height="0dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:maxLength="20"
        android:hint="@string/blanco"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_mod"
        android:layout_width="132dp"
        android:layout_height="56dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="348dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#E3E3E3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/modificar"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_borr"
        android:layout_width="132dp"
        android:layout_height="56dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#E3E3E3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/borrar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>