<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopapel"
    tools:context=".vista.AniadirRecordatorioActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/recordatorio"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="38sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tituloedittextid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/t_tulo3"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="113dp"
        android:layout_height="117dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="206dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:text="@string/fecha3"
            android:textColor="@android:color/black"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hora"
            android:textColor="@android:color/black"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="204dp"
        android:layout_height="116dp"
        android:layout_marginTop="207dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fechatextoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:labelFor="@id/horatextoid"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/horatextoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:labelFor="@id/fechatextoid"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="88dp"
        android:layout_height="116dp"
        android:layout_marginTop="207dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/calendario"
            android:layout_width="42dp"
            android:layout_height="52dp"
            android:contentDescription="@string/calendaricon"
            app:srcCompat="@android:drawable/ic_menu_month" />

        <ImageView
            android:id="@+id/hora"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:contentDescription="@string/reloj"
            app:srcCompat="@android:drawable/ic_menu_recent_history" />
    </LinearLayout>

    <EditText
        android:id="@+id/descripcionrecordatorioid"
        android:layout_width="221dp"
        android:layout_height="87dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:hint="@string/descripci_n3"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/btnaniadirrecordatorio"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#E3E3E3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/a_adir"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionrecordatorioid" />

</androidx.constraintlayout.widget.ConstraintLayout>